<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/text"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Subtítulo -->
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/summary_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"/>

    <!-- Total bill -->
    <TextView
        android:id="@+id/tv_total_table_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total_table"
        app:layout_constraintStart_toStartOf="@id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"/>

    <TextView
        android:id="@+id/tv_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_total_table_label"
        tools:text="$100.00" />

    <!-- Number of people -->
    <TextView
        android:id="@+id/tv_num_people_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/number_of_people"
        app:layout_constraintStart_toStartOf="@id/tv_total_table_label"
        app:layout_constraintTop_toBottomOf="@id/tv_total_table_label"/>

    <TextView
        android:id="@+id/tv_num_people_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_num_people_label"
        tools:text="4"/>

    <!-- Tip percentage -->
    <TextView
        android:id="@+id/tv_percentage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip_percentage"
        app:layout_constraintStart_toStartOf="@id/tv_num_people_label"
        app:layout_constraintTop_toBottomOf="@id/tv_num_people_label"/>

    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_percentage_label"
        tools:text="10%"/>

    <!-- Tip amount -->
    <TextView
        android:id="@+id/tv_tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip_value"
        app:layout_constraintStart_toStartOf="@id/tv_percentage_label"
        app:layout_constraintTop_toBottomOf="@id/tv_percentage_label"/>

    <TextView
        android:id="@+id/tv_tip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_tip_label"
        tools:text="$10.00"/>

    <!-- Per person -->
    <TextView
        android:id="@+id/tv_per_person_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/per_person"
        app:layout_constraintStart_toStartOf="@id/tv_tip_label"
        app:layout_constraintTop_toBottomOf="@id/tv_tip_label" />

    <TextView
        android:id="@+id/tv_amount_per_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_per_person_label"
        tools:text="$25.00" />

    <!-- Separator -->
    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_per_person_label"/>

    <!-- TOTAL -->
    <TextView
        android:id="@+id/tv_total_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_num_people_label"
        app:layout_constraintTop_toBottomOf="@id/separator"/>

    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_total_amount_label"
        tools:text="$115.00" />

    <!-- Botão -->
    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
